some structure update

--- a/Merch.html
+++ b/Merch.html
@@ -53,7 +53,7 @@
           <ul
             class="text-white flex font-bold justify-between text-4xl items-center gap-8"
           >
-            <li><a href="Hem.html" class="hover:bg-[#446584] p-2">Hem</a></li>
+            <li><a href="index.html" class="hover:bg-[#446584] p-2">Hem</a></li>
             <li>
               <a href="Merch.html" class="hover:bg-[#446584] p-2">Merch</a>
             </li>
@@ -88,7 +88,7 @@
       <!-- Mobile menu content (hidden by default) -->
       <div id="mobile-menu" class="hidden md:hidden bg-black text-white">
         <ul class="text-white flex flex-col text-4xl items-center gap-4 p-4">
-          <li><a href="Hem.html" class="hover:bg-[#446584] p-2">Hem</a></li>
+          <li><a href="index.html" class="hover:bg-[#446584] p-2">Hem</a></li>
           <li>
             <a href="Merch.html" class="hover:bg-[#446584] p-2">Merch</a>
           </li>
